packages/yew-macro/tests/custom_event/custom_event_fail.stderr
error: unexpected end of input, expected identifier
 --> $DIR/custom_event_fail.rs:4:5
  |
4 |     #[custom_event]
  |     ^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected string literal
 --> $DIR/custom_event_fail.rs:7:28
  |
7 |     #[custom_event(ident = not a literal string value)]
  |                            ^^^

error: expected identifier
  --> $DIR/custom_event_fail.rs:10:20
   |
10 |     #[custom_event("string without ident")]
   |                    ^^^^^^^^^^^^^^^^^^^^^^

error: custom_event attribute macro can only be applied to NewType structs
  --> $DIR/custom_event_fail.rs:18:5
   |
18 |     struct UnitStruct;
   |     ^^^^^^^^^^^^^^^^^^

error: custom_event attribute macro can only be applied to NewType structs
  --> $DIR/custom_event_fail.rs:21:5
   |
21 |     struct TupleStruct(Event, Event);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: custom_event attribute macro can only be applied to NewType structs
  --> $DIR/custom_event_fail.rs:24:5
   |
24 | /     struct PlainOldStruct {
25 | |         event: Event,
26 | |     }
   | |_____^
